--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,46 @@
-.App {
-  text-align: center;
+.container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 300px;
+  margin: auto;
 }
 
+input, button {
+  margin: 0.5em;
+}
+
+input {
+  padding-left: 0.75em;
+  width: 100%;
+  font-size: 16px;
+  border-color: #ccc;
+  border-radius: 10px;
+}
+
+input:focus {
+  outline: 2px solid #6a4c93;
+}
+
+button {
+  background-color: #6a4c93;
+  color: white;
+  padding: 0.75em;
+  font-size: small;
+  border-radius: 15px;
+}
+
+ul {
+  list-style: none;
+  padding: 0;
+}
+
+li {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  padding: 1em;
+  border: 1px solid #6a4c93;
+  border-radius: 10px;
+  margin-top: 1em;
+}
